--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@layer base {
+  h1 {
+    @apply text-xl md:text-2xl font-bold;
+  }
+
+  h2 {
+    @apply text-xl md:text-xl font-semibold;
+  }
+
+  p {
+    @apply text-l font-extralight;
+  }
+
+  strong {
+    @apply text-primary font-bold;
+  }
+
+  pre {
+    @apply dark:!bg-codeHightlightBg !bg-codeHightlightBgLight;
+  }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.topDecoration {
+  @apply before:absolute before:left-[-10%] before:top-[1px] before:h-px before:w-[110%] before:content-[''] before:bg-gradient-to-r before:from-transparent before:via-primary before:to-transparent;
+}
+
+:root {
+  /* Your default theme */
+  --background: #f2f5fa;
+  --foreground: #0f172a;
+  --foreground-text: #374151;
+}
+
+[data-theme="dark"] {
+  --background: #0f172a;
+  --foreground: white;
+  --foreground-text: #a3a3a3;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--background);
+  color: var(--foreground);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+p {
+  color: var(--foreground-text);
 }
